Update. Added dialog box after finishing the game. ToDo functional buttons on that dialog box.

--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>Area.qml</file>
+        <file>Blur.qml</file>
+        <file>EndDialogBox.qml</file>
     </qresource>
 </RCC>
