Added resize option after playing again

--- a/qml.qrc
+++ b/qml.qrc
@@ -6,5 +6,6 @@
         <file>EndDialogBox.qml</file>
         <file>GameLayout.qml</file>
         <file>SetSizeWindow.qml</file>
+        <file>ResizeDialogBox.qml</file>
     </qresource>
 </RCC>
